src/objects/AMR_Link__mdt.object
<CustomObject>
    <fields>
        <fullName>AMR_Type__c</fullName>
        <label>AMR Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Self Service</fullName>
                    <default>true</default>
                    <label>Self Service</label>
                </value>
                <value>
                    <fullName>AMR</fullName>
                    <label>AMR Review</label>
                </value>
                <value>
                    <fullName>AMR Auto Approve</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Method__c</fullName>
        <label>Application Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>General Application</fullName>
                    <default>true</default>
                    <label>General Application</label>
                </value>
                <value>
                    <fullName>Comity</fullName>
                </value>
                <value>
                    <fullName>Reinstatement</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Endorsement</fullName>
                </value>
                <value>
                    <fullName>Upgrade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Board__c</fullName>
        <label>Board</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Notary Public</fullName>
                    <default>true</default>
                    <label>Notary Public</label>
                </value>
                <value>
                    <fullName>Geologist</fullName>
                </value>
                <value>
                    <fullName>Timeshares</fullName>
                </value>
                <value>
                    <fullName>Architects</fullName>
                </value>
                <value>
                    <fullName>Appraisers - Real Estate</fullName>
                </value>
                <value>
                    <fullName>Camping Resorts</fullName>
                </value>
                <value>
                    <fullName>Funerals</fullName>
                </value>
                <value>
                    <fullName>Engineers</fullName>
                </value>
                <value>
                    <fullName>Appraisal Management Companies</fullName>
                </value>
                <value>
                    <fullName>On-site Wastewater</fullName>
                </value>
                <value>
                    <fullName>Landscape Architects</fullName>
                </value>
                <value>
                    <fullName>Cemeteries</fullName>
                </value>
                <value>
                    <fullName>Land Surveyors</fullName>
                </value>
                <value>
                    <fullName>Delegated Municipality</fullName>
                </value>
                <value>
                    <fullName>Manufactured Homes</fullName>
                </value>
                <value>
                    <fullName>Program Unknown</fullName>
                </value>
                <value>
                    <fullName>Misc Payments</fullName>
                </value>
                <value>
                    <fullName>Appraiser Course</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Generate_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <label>License Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Notary Public</fullName>
                    <default>true</default>
                    <label>Notary Public</label>
                </value>
                <value>
                    <fullName>Geologist</fullName>
                </value>
                <value>
                    <fullName>Geologist In Training</fullName>
                </value>
                <value>
                    <fullName>Camping Resort Salesperson</fullName>
                </value>
                <value>
                    <fullName>Registered Appraiser Trainee</fullName>
                </value>
                <value>
                    <fullName>Appraiser Trainee</fullName>
                </value>
                <value>
                    <fullName>Timeshare Salesperson</fullName>
                </value>
                <value>
                    <fullName>Timeshare Company</fullName>
                </value>
                <value>
                    <fullName>Architect</fullName>
                </value>
                <value>
                    <fullName>Camping Resort Company</fullName>
                </value>
                <value>
                    <fullName>Appraiser Course</fullName>
                </value>
                <value>
                    <fullName>Certified General Appraiser</fullName>
                </value>
                <value>
                    <fullName>Certificate of Removal Registration</fullName>
                </value>
                <value>
                    <fullName>Academic Intern</fullName>
                </value>
                <value>
                    <fullName>Temporary Certified General</fullName>
                </value>
                <value>
                    <fullName>Engineer in Training</fullName>
                </value>
                <value>
                    <fullName>Professional Engineer</fullName>
                </value>
                <value>
                    <fullName>State Licensed Appraiser</fullName>
                </value>
                <value>
                    <fullName>Appraisal Management Company</fullName>
                </value>
                <value>
                    <fullName>Appraisal Controlling Person</fullName>
                </value>
                <value>
                    <fullName>On-site Wastewater Designer</fullName>
                </value>
                <value>
                    <fullName>On-site Wastewater Inspector</fullName>
                </value>
                <value>
                    <fullName>Certified Residential Appraiser</fullName>
                </value>
                <value>
                    <fullName>Landscape Architect</fullName>
                </value>
                <value>
                    <fullName>Funeral Director Intern</fullName>
                </value>
                <value>
                    <fullName>Funeral Establishment</fullName>
                </value>
                <value>
                    <fullName>Embalmer Intern</fullName>
                </value>
                <value>
                    <fullName>Crematory</fullName>
                </value>
                <value>
                    <fullName>Cremated Remains Disposition Permit</fullName>
                </value>
                <value>
                    <fullName>Prearrangement Funeral Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sections__c</fullName>
        <label>Sections</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Request_Type__c</fullName>
        <label>Service Request Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>AMR Link</label>
    <pluralLabel>AMR Links</pluralLabel>
</CustomObject>